// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconCommentsBadge should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-comments-badge "
  height={15}
  viewBox="0 0 14 15"
  width={14}
>
  <g
    className="stroke-color"
    fill="none"
    fillRule="evenodd"
    stroke="#777"
    strokeWidth=".875"
  >
    <path
      d="M3.063 13.938l2.88-2.905h5.432c1.208 0 2.188-.98 2.188-2.187v-6.22c0-1.21-.98-2.188-2.188-2.188h-8.75c-1.208 0-2.188.98-2.188 2.187v6.22c0 1.21.98 2.188 2.188 2.188h.438v2.905z"
    />
    <path
      d="M3.938 3.97h6.124M3.938 7.5h6.124"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </g>
</AccessibleSVG>
`;

exports[`icons/general/IconCommentsBadge should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-comments-badge test"
  height={150}
  title="title"
  viewBox="0 0 14 15"
  width={160}
>
  <g
    className="stroke-color"
    fill="none"
    fillRule="evenodd"
    stroke="#000"
    strokeWidth=".875"
  >
    <path
      d="M3.063 13.938l2.88-2.905h5.432c1.208 0 2.188-.98 2.188-2.187v-6.22c0-1.21-.98-2.188-2.188-2.188h-8.75c-1.208 0-2.188.98-2.188 2.187v6.22c0 1.21.98 2.188 2.188 2.188h.438v2.905z"
    />
    <path
      d="M3.938 3.97h6.124M3.938 7.5h6.124"
      strokeLinecap="round"
      strokeLinejoin="round"
    />
  </g>
</AccessibleSVG>
`;
